2019-09-30  7.0.8-68 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.8-68, GIT revision 16...

2019-09-30  7.0.8-68 Cristy  <quetzlzacatenango@image...>
  * Support animated WebP encoding/decoding (reference
    https://github.com/ImageMagick/ImageMagick/pull/1708).

2019-09-29  7.0.8-67 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.8-67, GIT revision 16145:6f2feb9:20190929.

2019-09-28  7.0.8-67 Cristy  <quetzlzacatenango@image...>
  * line endings renedered as empty boxes (reference
    https://github.com/ImageMagick/ImageMagick/issues/1704).

2019-09-21  7.0.8-66 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.8-66, GIT revision 16134:f6ce80a:20190921.

2019-09-09  7.0.8-66 Cristy  <quetzlzacatenango@image...>
  * Support compound statements in FX while() (reference
    https://github.com/ImageMagick/ImageMagick/issues/1701).

2019-09-15  7.0.8-65 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.8-65, GIT revision 16130:254db34:20190915.

2019-09-09  7.0.8-65 Cristy  <quetzlzacatenango@image...>
  * Eliminate fault when trace delegate is not available.
  * Properly distinquish linear and non-linear gray colorspaces (reference
    https://github.com/ImageMagick/ImageMagick/issues/1680).

2019-09-07  7.0.8-64 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.8-64, GIT revision 16108:2ad3cbc:20190907.

2019-09-02  7.0.8-64 Cristy  <quetzlzacatenango@image...>
  * Support XPM symbolic (reference
    https://github.com/ImageMagick/ImageMagick/issues/1684).
  * DilateIntensity is channel independent (reference
    https://imagemagick.org/discourse-server/viewtopic.php?f=3&t=36641).

2019-08-31  7.0.8-63 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.8-63, GIT revision 16088:3b7a33d:20190831.

2019-08-24  7.0.8-63 Cristy  <quetzlzacatenango@image...>
  * Properly identify the DNG and AI image format (reference