@@ -4,6 +4,8 @@
 2019-09-30  7.0.8-68 Cristy  <quetzlzacatenango@image...>
   * Support animated WebP encoding/decoding (reference
     https://github.com/ImageMagick/ImageMagick/pull/1708).
+  * Text stroke cut off (reference
+    https://imagemagick.org/discourse-server/viewtopic.php?f=1&t=36829).
 
 2019-09-29  7.0.8-67 Cristy  <quetzlzacatenango@image...>
   * Release ImageMagick version 7.0.8-67, GIT revision 16145:6f2feb9:20190929.
